# mlc-reply

./: .gitignore  README.md  all_data.csv  all_data.sh  bad-strings.txt  datasets.py  eval.py  evaluate_string_from_gg.sh  fancy-fig.ipynb  find_weird.sh  generate_datasets.py  generate_novel_val_dataset.py  generate_rule_figure.sh  interpret_grammar.py  parse_generalizations.py  parse_output.py  parse_partial.py  performance-per-string.py  pyproject.toml  requirements.txt  simple.py  train.py
data_algebraic/train/: 000002.txt  000003.txt  000004.txt  000006.txt  000007.txt  000011.txt  000012.txt  000013.txt  000014.txt  000017.txt  000018.txt  000022.txt  000024.txt  000025.txt  000026.txt  000029.txt  000031.txt  000033.txt  000034.txt  000036.txt  000038.txt  000039.txt  000042.txt  000043.txt  000044.txt  000047.txt  000049.txt  000051.txt  000054.txt  000055.txt  000056.txt  000057.txt  000058.txt  000061.txt  000062.txt  000065.txt  000066.txt  000067.txt  000068.txt  000070.txt  (+49683 more)
data_algebraic/val/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  (+1256 more)
data_algebraic_alt/train/: 000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  (+99993 more)
paper-data/: 100_strings.txt  figure-1-data.csv  figure-1-raw-data.txt
(+255198 files in other folders)
